--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: wordkrill
-Title: What the Package Does (One Line, Title Case)
+Title: Wordkrill: Extending Wordfish into the Multidimensional Political Space
 Version: 0.0.0.9000
 Authors@R: 
     person("Benjamin", "Riesch", , "benjamin.riesch@univie.ac.at", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Description: Wordkrill fits Wordkrill models (generalisation of Wordfish models to multiple 
+dimensions) to document-feature matrices.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/naiveError/wordkrill
+URL: https://arxiv.org/abs/2506.20275
 BugReports: https://github.com/naiveError/wordkrill/issues
 Imports: 
     alabama,
