--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/naiveError/wordkrill
-URL: https://arxiv.org/abs/2506.20275
+URL: https://github.com/naiveError/wordkrill, https://arxiv.org/abs/2506.20275
 BugReports: https://github.com/naiveError/wordkrill/issues
 Imports: 
     alabama,
