--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
+Package: wordkrill
 Title: Wordkrill: Extending Wordfish into the Multidimensional Political Space
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "Benjamin", family = "Riesch", email = "benjamin.riesch@univie.ac.at", role = c("aut", "cre"))
+Authors@R: person(given = "Benjamin", family = "Riesch", email = "benjamin.riesch@univie.ac.at", role = c("aut", "cre"))
 Description: Wordkrill fits Wordkrill models (a generalisation of Wordfish models to multiple
     dimensions) to document-feature matrices.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/naiveError/wordkrill,
-    https://arxiv.org/abs/2506.20275
+URL: https://github.com/naiveError/wordkrill
 BugReports: https://github.com/naiveError/wordkrill/issues
-Imports: 
+Imports:
     alabama,
     methods,
     quanteda,
